# ground_control

./: .gitignore  README.md  pyproject.toml
ground_control/: simple_stitch.py
src/ground_control/: __init__.py  simple_stitch.py
tests/: test_simple_stitch.py
