[project]
name = "ground_control"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=4.10.0.84",
]


[project.optional-dependencies]
test = [
    "pytest>=8.3.3",
    "pytest-env>=1.1.5",
]
dev = [
    "ruff>=0.6.7",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = { find = { where = ["src"] } }
